intermediate fix for the gallery on firefox

--- a/styles/components/Gallery.module.scss
+++ b/styles/components/Gallery.module.scss
@@ -248,7 +248,14 @@
       }
 
       > img {
+        display: block;
+
         height: 100%;
+        width: auto;
+
+        max-height: 100%;
+        max-width: 100%;
+        // object-fit: none;
       }
 
       > figcaption {
